syntax = "proto3";

package calendar;

option go_package = "github.com/VladNF/calendar/internal/server/grpc/gen";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service CalendarService {
  rpc GetEvent(EventId) returns (Event) {}
  rpc PutEvent(Event) returns (Event) {}
  rpc DeleteEvent(EventId) returns (google.protobuf.Empty) {}
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {}
}

message Event {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp starts_at = 3;
  google.protobuf.Timestamp ends_at = 4;
  string notes = 5;
  string owner_id = 6;
  int64 alert_before = 7;
}

message EventId {
  string id = 1;
}

message ListEventsRequest {
  enum Agenda {
    DAILY = 0;
    WEEKLY = 1;
    MONTHLY = 2;
  }
  Agenda agenda = 1;
  google.protobuf.Timestamp start_from = 2;
}

message ListEventsResponse {
  repeated Event events = 1;
}
